@@ -211,12 +211,12 @@ override_dh_auto_test-indep:
 
 override_dh_auto_test-arch:
 ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
-	# when tests fail, print all regression.diffs files, as well as the newest log files
+	# when tests fail, print newest 3 log files
 	# temp-install wants to be invoked from a top-level make, unset MAKELEVEL here
 	unset MAKELEVEL; if ! make -C build check-world EXTRA_REGRESS_OPTS='--port=$(shell perl -le 'print 1024 + int(rand(64000))')'; then \
-	    for l in `find build -name regression.diffs -o -mmin 0 \( -name initdb.log -o -name postmaster.log \)`; do \
+	    for l in `find build \( -name regression.diffs -o -name initdb.log -o -name postmaster.log \) | perl -we 'print map { "$$_\n"; } sort { (stat $$a)[9] <=> (stat $$b)[9] } map { chomp; $$_; } <>' | tail -3`; do \
 		echo "******** $$l ********"; \
-		tail -n100 $$l; \
+		cat $$l; \
 	    done; \
 	    $(TESTSUITE_FAIL_CMD); \
 	fi
